# Nextcloud_plasma_potd

./: .gitignore  CAMBIA_IMMAGINE.md  CHANGELOG.md  CMakeLists.txt  COMMIT_MESSAGE.txt  CONFIGURAZIONE.md  INTEGRATION_KDE.md  Install.sh  QUANDO_AGGIORNA_LISTA.md  README.md  UNINSTALL.md  nextcloudprovider.conf.example
docs/: CACHE_JSON_ANALYSIS.md  CHANGELOG.md  CHANGE_IMAGE.md  COMPLIANCE_REPORT.md  CONFIGURATION.md  UNINSTALL.md  WHEN_LIST_UPDATES.md
gui/: CMakeLists.txt  README.md  execute-save.sh  get-home.sh  main.cpp  main.qml  read-config.sh  run.sh  save-config.sh  save-helper.js  save-with-feedback.sh  write-config.sh
plugins/providers/: CMakeLists.txt  debug.h  nextcloudprovider.cpp  nextcloudprovider.h  nextcloudprovider.json  plasma_potd_export.h
scripts/: clear-cache.sh
